python-defaults (2.7.7-1) UNRELEASED; urgency=medium

  [ Matthias Klose ]
  * Bump version to 2.7.7.

  [ Barry Warsaw ]
  * Fix typo in policy doc re: wheel package exception list.
  * Add myself to Uploaders.

  [ Scott Kitterman ]
  * Fix error in pydist package relationship regex (Closes: #735163)
    - Thanks to Rafael Laboissiere for the patch

 -- Matthias Klose <doko@debian.org>  Mon, 02 Jun 2014 19:54:25 +0200

python-defaults (2.7.6-2) unstable; urgency=medium

  [ Barry Warsaw ]
  * Add python policy for Python Wheels.

 -- Scott Kitterman <scott@kitterman.com>  Wed, 21 May 2014 00:04:16 -0400

python-defaults (2.7.6-1) unstable; urgency=medium

  * Bump version to 2.7.6.
  * dh_python2: no longer move files to /usr/share/pyshared, don't create
    /usr/lib/pyshared symlinks for extensions.
  * Use UTF-8 encoding for the python policy in HTML format. Closes: #689931.
  * Add a chapter for the python policy to prefer Python 3 over Python 2.

 -- Matthias Klose <doko@debian.org>  Mon, 12 May 2014 12:16:34 +0200

python-defaults (2.7.5-5) unstable; urgency=low

  [ Steve Langasek ]
  * Adjust debpython/depends.py to be multiarch-friendly.

  [ Piotr Ożarowski ]
  * Set "Multi-Arch: allowed" in python, python-dev, python-minimal,
    python-dbg, python-all, python-all-dev, python-all-dbg
  * Replace /usr/bin/dh_python2 with a Python script that invokes
    dh-python's dh_python2 if Build-Depends{,-Indep} contains dh-python

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 12 Sep 2013 21:25:01 +0200

python-defaults (2.7.5-4) unstable; urgency=low

  * Add libpython-all-dbg.postinst to convert the doc directory to a symlink
    on upgrade (Closes: #718736)

 -- Scott Kitterman <scott@kitterman.com>  Tue, 13 Aug 2013 00:23:58 -0400

python-defaults (2.7.5-3) unstable; urgency=low

  [ Matthias Klose ]
  * Fix libpython-all-dbg doc dir symlink. Closes: #712270.

  [ Piotr Ożarowski ]
  * Replace /usr/bin/dh_python2 with a shell script that invokes